--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-     <title>Lυᴄкуxԃ</title>
+     <title>KINGEXCHANGE</title>
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -1894,7 +1894,7 @@ var pJS = function (e, a) {
                     <a class="active" href="#" target="_blank">Github</a>
                     <a class="active" href="#" target="_blank">Instagram</a>
                     <a class="active" href="#" target="_blank">YouTube</a>
-                    <a class="active" href="https://telegram.dog/Lvxky" target="_blank">Telegram</a>
+                    <a class="active" href="https://telegram.com/https://t.me/king_exchange1" target="_blank">Telegram</a>
                </div>
                <div class="header" onclick="toggle()">
                     <label for="check" class="checkbtn" id="chkbtn">
@@ -1912,7 +1912,7 @@ var pJS = function (e, a) {
                               </div>
                          </div>
                          <h3 class="name"></h3>
-                         <h3 class="sub-name">• 𝗟𝗨𝗖𝗞𝗬 𝗫𝗗 •</h3>
+                         <h3 class="sub-name">• kingexchange •</h3>
                     </div>
                </div>
 
@@ -1920,9 +1920,9 @@ var pJS = function (e, a) {
                     <div class="left">
                          <div class="about-container">
                               <h3 class="title">About</h3>
-                              <p class="text">✦ Cʟᴧss: XI | Sᴄʜᴏᴏʟ: IDK ✦</p>
-                              <p class="text">~ Dᴇᴠ ~</p>
-                              <p class="text">• Pʏᴛʜᴏɴ | JᴧᴠᴧSᴄʀɪᴘᴛ | Hᴛᴍʟ | Css •</p>
+                              <p class="text">✦ Trade With US Today ✦</p>
+                              <p class="text">~ Services ~</p>
+                              <p class="text">• Giftcards| Crypto | Funds | Edits •</p>
                          </div>
                          <div class="icons-container">
                               <a href="#" class="icon">
@@ -1931,7 +1931,7 @@ var pJS = function (e, a) {
                               <a href="#" class="icon">
                                    <i class="fa-brands fa-instagram"></i>
                               </a>
-                              <a href="https://telegram.dog/Lvxky" class="icon">
+                              <a href="https://t.me/king_exchange1" class="icon">
                                    <i class="fa-brands fa-telegram"></i>
                               </a>
                               <a href="#" class="icon">
@@ -1943,7 +1943,7 @@ var pJS = function (e, a) {
                                    <a href="#" class="follow">Follow</a>
                               </div>
                               <div class="share-wrap">
-                                   <a href="https://telegram.dog/Lvxky" class="share">Contact</a>
+                                   <a href="https://t.me/king_exchange1" class="share">Contact</a>
                               </div>
                          </div>
                     </div>
